<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">RTLnotepad</string>
	<string name="save">Save</string>
	<string name="save_as">Save as…</string>
	<string name="open">Open</string>
	<string name="done">Done</string>
	<string name="ok">OK</string>
    <string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="cancel">Cancel</string>
	<string name="text_size">Font size</string>
	<string name="theme">Theme</string>
	<string name="theme_light">Light</string>
	<string name="theme_dark">Dark</string>
	<string name="text_small">Small (14sp)</string>
	<string name="text_medium">Medium (18sp)</string>
	<string name="text_large">Large (22sp)</string>
	<string name="exit">Exit</string>
	<string name="unsaved_files">There are unsaved changes. Are you sure you want to exit?</string>
	<string name="last_files">Last files</string>
	<string name="encoding">Encoding</string>
	<string name="file">File</string>
	<string name="view">View</string>
	<string name="about">About</string>
	<string name="create">Create</string>
	<string name="no_editor">Create a new file or open an existing one to start editing</string>
	<string name="new_document">New document</string>
	<string name="new_file">New file</string>
	<string name="close_tab">Close the tab</string>
	<string name="close_tab_warning">There are unsaved changes in this tab. Save them before closing?</string>
	<string name="apply">Apply</string>
	<string name="encoding_error">Failed to change encoding.</string>
	<string name="encoding_change_warning">There are unsaved changes to this file. If you change the encoding, they will be lost. Proceed?</string>
	<string name="file_save_error">Failed to save the file.</string>
	<string name="wrong_file_type_warning">This is not a text file. Proceed?</string>
	<!--
	<string name="progress_reading">Reading file...</string>
	<string name="progress_writing">Writing file...</string>
	-->
	<string name="reading_error">Failed to read the file.</string>
	<string name="processing">Processing…</string>
	<string name="do_in_background">Do in background</string>
	<string name="file_save_success">Successfully saved %1$s.</string>
	<string name="grant_read_permissions">In order to continue the operation, you need to grant read permissions to the app. Continue?</string>
	<string name="grant_write_permissions">In order to continue the operation, you need to grant write permissions to the app. Continue?</string>
	<string name="file_read_only">This file is read-only.</string>

</resources>
